--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 <script src="js/app/controllers/proflPlanCtrl.js"></script>
 <script src="js/app/controllers/dispPlanCtrl.js"></script>
 <script src="js/app/controllers/loaderCtrl.js"></script>
+<script src="js/app/controllers/settingsCtrl.js"></script>
 
 
 
