--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 
 <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-<script src="js/paper-dashboard.js"></script>
+<!--<script src="js/paper-dashboard.js"></script>-->
 
 
 <!--angular-->
